2003-09-29  Paul Eggert  <eggert@twinsun.com>

	* strftime.c (tm_diff) [! HAVE_TM_GMTOFF]:
	Fix arg typo in previous patch.

2003-09-28  Jim Meyering  <jim@meyering.net>

	* error.c: Correct cpp indentation.

2003-09-27  Paul Eggert  <eggert@twinsun.com>

	* minmax.h (MIN, MAX) [__STDC__ && defined __GNUC__ && __GNUC__ >= 2]:
	Omit the special code that used __typeof__, since we worry that
	it could be more trouble than it's worth.  See:
	http://mail.gnu.org/archive/html/bug-gnulib/2003-01/msg00090.html
	http://mail.gnu.org/archive/html/bug-gnulib/2003-01/msg00095.html

	* free.c: New file.

2003-09-26  Jim Meyering  <jim@meyering.net>

	* error.c (error_tail): Move some declarations
	into inner scope where the local variables are used.

2003-09-26  Bruno Haible  <bruno@clisp.org>

	* stpncpy.h (gnu_stpncpy): New declaration.
	(stpncpy): Define as alias for gnu_stpncpy.
	* stpncpy.c [!_LIBC]: Define gnu_stpncpy, not stpncpy.

2003-09-26  Paul Eggert  <eggert@twinsun.com>

	* error.c (SIZE_MAX) [!defined SIZE_MAX]: Define.
	(error_tail): Do not loop, reallocating temporary buffer, since
	the output cannot contain more wide characters than the input
	contains bytes, the size must be big enough already.  This avoids
	one potential size overflow calculation.  Check for size overflow
	when calculating temporary buffer size.  Free temporary buffer
	when done, if it was allocated with malloc; this plugs a memory
	leak.  Remove casts from void * to pointers, that are no longer
	needed now that we're assuming C89 or better.

	Merge error changes from glibc.

	* error.c, error.h: Update copyright notice header to match glibc.
	* error.c [defined _LIBC]: Include <errno.h>, <bits/libc-lock.h>.
	(error, error_at_line) [defined _LIBC && defined __libc_ptf_call]:
	Disable cancellation while printing error.
	* error.h: Prepend __ to parameter names.

2003-09-25  Karl Berry  <karl@gnu.org>

	* argp-fmtstream.c, argp-help.c: update from libc.
